Wed May 23 12:41:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/ClientRequestInterceptor_Adapter_Impl.{h,cpp}:
          Made the exception argument of process_forward_request const

        * tao/TAO_Server_Request.{h,cpp,inl}:
          Removed result_seq_ member and associated methods, I did a
          search through the code and couldn't fine a place where these
          are used, so removed them. If this causes errors on the
          scoreboard I will readd them, but so far as I can tell that will
          not be needed. This will reduce footprint and increase
          performance

        * tao/AnyTypeCode/Union_TypeCode.cpp:
          Addressed code not reached warning

Wed May 23 12:37:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/LongUpcalls/run_test.pl:
          Updated for cross platform testing

Wed May 23 11:41:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/EndpointPolicy/run_test.pl:
          Updated for cross platform testing

Tue May 22 12:40:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Generator_Parser.cpp (write_reply_header):
          The service context can just be marshaled with the regular <<
          operator in all cases and added a check whether this succeeded
          or not

        * tao/RTCORBA/Thread_Pool.cpp:
          Layout changes

Mon May 21 12:36:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMI_Buffering/run_timeout_reactive.pl:
        * tests/Bug_2735_Regression/run_test.pl:
        * tests/Crash_On_Write/run_test.pl:
        * tests/Faults/run_test.pl:
        * tests/Portable_Interceptors/Redirection/run_test.pl:
        * tests/Smart_Proxies/Policy/run_test.pl:
          Improved for VxWorks cross platform testing

Mon May 21 12:01:30 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * orbsvcs/tests/Bug_2925_Regression/run_test_ipv6.pl: