@@ -1,3 +1,9 @@
+Wed May 23 19:57:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/TransportCurrent/IIOP/run_test.pl:
+        * tests/TransportCurrent/Framework/run_test.pl:
+          Updated for cross platform testing
+
 Wed May 23 12:41:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/PI/ClientRequestInterceptor_Adapter_Impl.{h,cpp}:
